Added acknowledgements to top of file, kept images same as last upload and model same as earlier one

--- a/IC2 Open Source College Football Poll.ipynb
+++ b/IC2 Open Source College Football Poll.ipynb
@@ -234,6 +234,10 @@
     }
    ],
    "source": [
+    "# Thank you to my teammates Isaih Battiste and Chris Hanes for partnership making this new poll\n",
+    "# Thank you also to these artificial intelligence (AI) Large Language Models (LLMs) for their help: Claude Sonnet 4.5, DeepSeek Version 3.2, and ChatGPT 5.1 Auto\n",
+    "# Thank you to Sports Reference Football (College) https://www.sports-reference.com/cfb/ for the data\n",
+    "\n",
     "# ============================================================================\n",
     "# IC² PURE: CFP-Era Training Only (2014-2024)\n",
     "# ============================================================================\n",
